# fit2srt

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: flakehub-publish-tagged.yml  lint.yml  nix.yml  test.yml  typo.yml  update-badge.yml
asset/: 713-2.fit  garmin_g1.fit
assets/: 131-1.fit  131-2.fit
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: basic.rs
gui/: Cargo.toml
gui/src/: main.rs
lib/: Cargo.toml
lib/src/: error.rs  lib.rs  srt_iter.rs  summary.rs
nix/: packages.nix
src/: lib.rs  main.rs
tests/: basic.rs
