[package]
name = "fit2srt"
version = "0.1.1"
edition = "2024"

[dependencies]
fitparser = "0.9.0"
chrono = "0.4.28"
uutils-args = { git = "https://github.com/uutils/uutils-args.git" }

[dev-dependencies]
test_bin = "0.4.0"
test-with = { version = "*", default-features = false, features = ["timezone"] }
