[package]
name = "fit2srt-cli"
version = "0.3.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
fit2srt-core = { path = "../lib" }
chrono.workspace = true
clap = { version =  "4.5.58", features= ["derive"] }

[dev-dependencies]
test_bin = "0.5.0"
test-with = { version = "*", default-features = false, features = ["timezone"] }
