[package]
name = "fit2srt-gui"
version = "0.2.0"
edition = "2021"
rust-version = "1.77.0" # Due to std::fs::create_new

[dependencies]
fit2srt-core = { path = "../lib" }
iced = { git = "https://github.com/pop-os/iced.git", branch = "master", features = [
    "wayland",
    "winit",
    "image"
] }
console_error_panic_hook = "0.1"
console_log = "1.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
open = "5"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# iced = { git = "https://github.com/Faervan/iced_pop-os.git", features = ["image", "debug", "webgl", "fira-sans"] }
