[package]
name = "fit2srt-gui"
version = "0.1.2"
edition = "2021"

[dependencies]
fit2srt-core = { path = "../lib" }
iced = { git = "https://github.com/pop-os/iced.git", branch = "master", features = [
    "wayland",
    "winit",
    "image",
    # "qr_code"
] }
native-dialog = "0.9.5"
chrono.workspace = true


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
open = "5"

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# iced = { git = "https://github.com/Faervan/iced_pop-os.git", features = ["image", "debug", "webgl", "fira-sans"] }
